# ai-proxy

./: .gitignore  Cargo.toml  README.md  config.example.toml  debug_mock_test.rs  debug_test.rs
.kiro/specs/ai-proxy-core/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
benches/: performance_benchmarks.rs
docs/: README.md  performance-testing-summary.md
docs/api/: metrics-api.md  openapi.yml  rest-api.md  usage-examples.md
docs/architecture/: deployment.md  design-patterns.md  overview.md  technical-spec.md
docs/guides/: module-design.md
scripts/: performance_test.sh  run_performance_tests.sh  test_api.sh
src/: config.rs  errors.rs  lib.rs  main.rs  metrics.rs  middleware.rs  server.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  registry.rs
src/providers/anthropic/: mod.rs  model.rs  provider.rs
src/providers/gemini/: mod.rs  model.rs  provider.rs  utils.rs
src/providers/openai/: mod.rs  model.rs  provider.rs
tests/: config_tests.rs  data_transformation_edge_cases_tests.rs  data_transformation_tests.rs  end_to_end_streaming_tests.rs  errors_tests.rs  integration_framework.rs  integration_tests.rs  lib.rs  load_tests.rs  metrics_tests.rs  middleware_tests.rs  performance_tests.rs  provider_registry_tests.rs  server_tests.rs  streaming_performance_tests.rs  streaming_tests.rs
tests/providers/: anthropic_tests.rs  gemini_test.rs  mod.rs  openai_tests.rs  registry_tests.rs
